--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ dependencies:
   flutter:
     sdk: flutter
   get: ^4.7.2
-  dots_indicator: ^4.0.1
+  dots_indicator: ^4.0.0
+  shared_preferences: ^2.5.3
 
 
   # The following adds the Cupertino Icons font to your application.
