designed robust login logic and finished withthe registration logic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cmake.sourceDirectory": "C:/Users/adesh/Desktop/food_delivery_ecommerce/linux",
     "cSpell.words": [
+        "authcontroller",
         "Cupertino",
         "ecommerce",
         "Getx",
